--- a/turret-pico/CMakeLists.txt
+++ b/turret-pico/CMakeLists.txt
@@ -47,7 +47,11 @@ pico_enable_stdio_usb(turret-pico 1)
 # Add the standard library to the build
 target_link_libraries(turret-pico
         pico_stdlib
-        hardware_pwm)
+        hardware_pwm
+        pico_cyw43_arch_none
+        pico_btstack_classic
+        pico_btstack_ble
+        pico_btstack_cyw43)
 
 # Add the standard include files to the build
 target_include_directories(turret-pico PRIVATE
